# vk_video_record_layer

./: .gitignore  Cargo.toml  README  build.rs  generate_vk_layer.sh  vk_video_record.json
shaders/: bgr_to_uv.hlsl  bgr_to_y.hlsl  bgr_to_yuv.hlsl  bgr_to_yuv_rec709.hlsl
src/: VkVideoGopStructure.cpp  VkVideoGopStructure.h  bitstream.rs  buffer_queue.rs  cmd_buffer_queue.rs  creation.rs  dpb.rs  gop_gen.rs  lib.rs  profile.rs  session_parameters.rs  settings.rs  shader.rs  state.rs  video_session.rs  vk_beta.rs  vk_layer.rs  vulkan_utils.rs
