[package]
name = "vk_video_record_layer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
#ash = { git = "https://github.com/ash-rs/ash/", branch = "update" }
ash = "0.38.0"
bitstream-io = "2.2.0"
chrono = "0.4.26"
dirs = "5.0.0"
itertools = "0.12"
log = "0.4.17"
once_cell = "1.18"
pretty_env_logger = "0.5.0"
regex = "1.10.2"
#spirv-reflect = { git = "https://github.com/theHamsta/spirv-reflect-rs.git" }
rspirv-reflect = "0.8.0"

[build-dependencies]
anyhow = "1.0"
glob = "0.3"
